tests/baselines/reference/narrowByClauseExpressionInSwitchTrue3.errors.txt
narrowByClauseExpressionInSwitchTrue3.ts(15,14): error TS2367: This comparison appears to be unintentional because the types '"square"' and '"circle"' have no overlap.


==== narrowByClauseExpressionInSwitchTrue3.ts (1 errors) ====
    type Shape =
        | { kind: "circle", radius: number }
        | { kind: "square", sideLength: number }
    
    function wat(shape: Shape) {
        switch (true) {
            case shape.kind === "circle":
                return Math.PI * shape.radius ** 2;
            case shape.kind === "circle": // should error
        }
    
        if (shape.kind === "circle") {
            return Math.PI * shape.radius ** 2;
        }
        else if (shape.kind === "circle") {
                 ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"square"' and '"circle"' have no overlap.
            //         ~~~~
            // Property 'kind' does not exist on type 'never'.
        }
    }
    